fix alignment on bonuses partial with 'name' and 'details', change was made to layout.css file

--- a/app/assets/stylesheets/_layouts.css.scss
+++ b/app/assets/stylesheets/_layouts.css.scss
@@ -122,7 +122,6 @@ body#application {
 		// Box properties
 		float: left;
 		// Background & borders
-	
 		// Typography
 	
 		// Other
@@ -332,4 +331,9 @@ input.read_only {
 	color: $text;
 	// Other
 
+}
+
+tr .js-bonus_details {
+	// Box properties
+	padding-top:16px !important;
 }
